force-app/main/default/objects/Stage_Progression__mdt/Stage_Progression__mdt.object-meta.xml
<CustomObject>
    <label>Stage Progression</label>
    <pluralLabel>Stage Progressions</pluralLabel>
</CustomObject>