force-app/main/default/objects/Stage_Progression__mdt/fields/Block_Executive_Field_API__c.field-meta.xml
<CustomField>
    <fullName>Block_Executive_Field_API__c</fullName>
    <label>Block Executive Field API</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>