force-app/main/default/objects/Stage_Progression__mdt/fields/Current_Stage__c.field-meta.xml
<CustomField>
    <fullName>Current_Stage__c</fullName>
    <label>Current Stage</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>