force-app/main/default/objects/Stage_Progression__mdt/fields/Project_Type__c.field-meta.xml
<CustomField>
    <fullName>Project_Type__c</fullName>
    <label>Project Type</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>